# back-spring/src/main/java/com/ecommerce/backend/auth/dto/LoginResponse.java
@@ -1,0 +1,8 @@
+package com.ecommerce.backend.auth.dto;
+
+public record LoginResponse(
+        String accessToken,
+        String username,
+        String role
+) {
+}
